[WinCairo] Start RemoteInspectorServer https://bugs.webkit.org/show_bug.cgi?id=199938 <rdar://problem/53323048>

Reviewed by Fujii Hironori.

Source/JavaScriptCore:

* inspector/remote/socket/RemoteInspectorSocket.cpp:
* inspector/remote/socket/win/RemoteInspectorSocketWin.cpp:
  - Fixed some network byte order issues
  - Need to check for POLLHUP in isReadable as closed windows sockets don't have POLLIN set

Source/WebKit:

Enable the remote inspector client on WinCairo.
The inspector server will run if the WEBKIT_INSPECTOR_SERVER environment variable is set.
WEBKIT_INSPECTOR_SERVER needs to be set in the form of <ip>:port e.g. WEBKIT_INSPECTOR_SERVER=127.0.0.1:1234.

Updated the protocol handler to update the target list with DOM manipulation.

* UIProcess/socket/RemoteInspectorClient.cpp:
* UIProcess/socket/RemoteInspectorClient.h:
* UIProcess/socket/RemoteInspectorProtocolHandler.cpp:
* UIProcess/socket/RemoteInspectorProtocolHandler.h:
* UIProcess/win/WebView.cpp:


Canonical link: https://commits.webkit.org/215771@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250328 268f45cc-cd09-0410-ab3c-d52691b4dbfc