Source/WebKit/UIProcess/socket/RemoteInspectorClient.cpp
@@ -85,12 +85,17 @@ private:
     String m_debuggableType;
 };
 
-RemoteInspectorClient::RemoteInspectorClient(const char* address, unsigned port, RemoteInspectorObserver& observer)
+RemoteInspectorClient::RemoteInspectorClient(URL url, RemoteInspectorObserver& observer)
     : m_observer(observer)
 {
-    m_connectionID = connectInet(address, port);
+    if (!url.host() || !url.port()) {
+        LOG_ERROR("Invalid inspector url: %s", url.string().utf8().data());
+        return;
+    }
+
+    m_connectionID = connectInet(url.host().utf8().data(), url.port().value());
     if (!m_connectionID) {
-        LOG_ERROR("Inspector client could not connect to %s:%d", address, port);
+        LOG_ERROR("Inspector client could not connect to %s", url.string().utf8().data());
         return;
     }
 
@@ -131,10 +136,14 @@ void RemoteInspectorClient::connectionClosed()
     m_targets.clear();
     m_inspectorProxyMap.clear();
     m_observer.connectionClosed(*this);
+    m_observer.targetListChanged(*this);
 }
 
 void RemoteInspectorClient::didClose(ConnectionID)
 {
+    callOnMainThread([this] {
+        connectionClosed();
+    });
 }
 
 void RemoteInspectorClient::inspect(ConnectionID connectionID, TargetID targetID, const String& type)
