Source/WebKit/UIProcess/socket/RemoteInspectorClient.h
@@ -30,6 +30,7 @@
 #include <JavaScriptCore/RemoteControllableTarget.h>
 #include <JavaScriptCore/RemoteInspectorConnectionClient.h>
 #include <wtf/HashMap.h>
+#include <wtf/URL.h>
 #include <wtf/Vector.h>
 #include <wtf/text/WTFString.h>
 
@@ -48,10 +49,10 @@ public:
 using ConnectionID = Inspector::ConnectionID;
 using TargetID = Inspector::TargetID;
 
-class RemoteInspectorClient : public Inspector::RemoteInspectorConnectionClient {
+class RemoteInspectorClient final : public Inspector::RemoteInspectorConnectionClient {
     WTF_MAKE_FAST_ALLOCATED();
 public:
-    RemoteInspectorClient(const char* address, unsigned port, RemoteInspectorObserver&);
+    RemoteInspectorClient(URL, RemoteInspectorObserver&);
     ~RemoteInspectorClient();
 
     struct Target {
